#!/usr/bin/env python3
"""
–¢–µ—Å—Ç —Ä–µ–∞–ª—å–Ω–æ–≥–æ gRPC —Å—Ç—Ä–∏–º–∞ –¥–ª—è –¥–∏–∞–≥–Ω–æ—Å—Ç–∏–∫–∏ –ø—Ä–æ–±–ª–µ–º—ã –ø—Ä–µ—Ä—ã–≤–∞–Ω–∏—è
"""

import asyncio
import time
import numpy as np
import sys
import os

# –î–æ–±–∞–≤–ª—è–µ–º –ø—É—Ç—å –¥–ª—è –∏–º–ø–æ—Ä—Ç–∞
sys.path.append(os.path.dirname(os.path.abspath(__file__)))

from audio_player import AudioPlayer
from grpc_client import GrpcClient
from utils.hardware_id import get_hardware_id

async def test_real_grpc_interruption():
    """–¢–µ—Å—Ç–∏—Ä—É–µ–º –ø—Ä–µ—Ä—ã–≤–∞–Ω–∏–µ —Ä–µ–∞–ª—å–Ω–æ–≥–æ gRPC —Å—Ç—Ä–∏–º–∞"""
    
    print("üåê –¢–ï–°–¢ –†–ï–ê–õ–¨–ù–û–ì–û GPRC –°–¢–†–ò–ú–ê")
    print("=" * 60)
    
    # 1. –ü—Ä–æ–≤–µ—Ä–∫–∞ —Å–µ—Ä–≤–µ—Ä–∞
    print("\n1Ô∏è‚É£ –ü–†–û–í–ï–†–ö–ê –°–ï–†–í–ï–†–ê:")
    print("   üîç –£–±–µ–¥–∏—Ç–µ—Å—å, —á—Ç–æ —Å–µ—Ä–≤–µ—Ä –∑–∞–ø—É—â–µ–Ω: python grpc_server.py")
    print("   üîç –°–µ—Ä–≤–µ—Ä –¥–æ–ª–∂–µ–Ω –±—ã—Ç—å –¥–æ—Å—Ç—É–ø–µ–Ω –Ω–∞ localhost:50051")
    
    # 2. –ò–Ω–∏—Ü–∏–∞–ª–∏–∑–∞—Ü–∏—è –∫–æ–º–ø–æ–Ω–µ–Ω—Ç–æ–≤
    print("\n2Ô∏è‚É£ –ò–ù–ò–¶–ò–ê–õ–ò–ó–ê–¶–ò–Ø –ö–û–ú–ü–û–ù–ï–ù–¢–û–í:")
    audio_player = AudioPlayer()
    grpc_client = GrpcClient()
    print("   ‚úÖ AudioPlayer —Å–æ–∑–¥–∞–Ω")
    print("   ‚úÖ GrpcClient —Å–æ–∑–¥–∞–Ω")
    
    # 3. –ü–æ–¥–∫–ª—é—á–µ–Ω–∏–µ –∫ —Å–µ—Ä–≤–µ—Ä—É
    print("\n3Ô∏è‚É£ –ü–û–î–ö–õ–Æ–ß–ï–ù–ò–ï –ö –°–ï–†–í–ï–†–£:")
    try:
        await grpc_client.connect()
        print("   ‚úÖ –ü–æ–¥–∫–ª—é—á–µ–Ω–∏–µ –∫ —Å–µ—Ä–≤–µ—Ä—É —É—Å—Ç–∞–Ω–æ–≤–ª–µ–Ω–æ")
    except Exception as e:
        print(f"   ‚ùå –û—à–∏–±–∫–∞ –ø–æ–¥–∫–ª—é—á–µ–Ω–∏—è: {e}")
        print("   üîß –ó–∞–ø—É—Å—Ç–∏—Ç–µ —Å–µ—Ä–≤–µ—Ä: cd ../server && python grpc_server.py")
        return
    
    # 4. –°–æ–∑–¥–∞–Ω–∏–µ —Ç–µ—Å—Ç–æ–≤–æ–≥–æ –∑–∞–ø—Ä–æ—Å–∞
    print("\n4Ô∏è‚É£ –°–û–ó–î–ê–ù–ò–ï –¢–ï–°–¢–û–í–û–ì–û –ó–ê–ü–†–û–°–ê:")
    test_command = "–°–∫–∞–∂–∏ –∫–æ—Ä–æ—Ç–∫—É—é —Ñ—Ä–∞–∑—É –¥–ª—è —Ç–µ—Å—Ç–∏—Ä–æ–≤–∞–Ω–∏—è –ø—Ä–µ—Ä—ã–≤–∞–Ω–∏—è"
    print(f"   üìù –ö–æ–º–∞–Ω–¥–∞: {test_command}")
    
    # 5. –ó–∞–ø—É—Å–∫ gRPC —Å—Ç—Ä–∏–º–∞
    print("\n5Ô∏è‚É£ üöÄ –ó–ê–ü–£–°–ö GPRC –°–¢–†–ò–ú–ê:")
    print("   üîá –ê—Å—Å–∏—Å—Ç–µ–Ω—Ç –Ω–∞—á–Ω–µ—Ç –≥–æ–≤–æ—Ä–∏—Ç—å...")
    print("   üîá –ù–ê–ñ–ú–ò–¢–ï –ü–†–û–ë–ï–õ –¥–ª—è –ø—Ä–µ—Ä—ã–≤–∞–Ω–∏—è!")
    
    # –ü–æ–ª—É—á–∞–µ–º Hardware ID
    hardware_id = get_hardware_id()
    print(f"   üÜî Hardware ID: {hardware_id[:20]}...")
    
    # –£—Å—Ç–∞–Ω–∞–≤–ª–∏–≤–∞–µ–º hardware_id –≤ GrpcClient
    grpc_client.hardware_id = hardware_id
    
    # –°–æ–∑–¥–∞–µ–º –∑–∞–¥–∞—á—É –¥–ª—è gRPC —Å—Ç—Ä–∏–º–∞
    # stream_audio –Ω–µ –ø—Ä–∏–Ω–∏–º–∞–µ—Ç audio_player - –∏—Å–ø–æ–ª—å–∑—É–µ—Ç –≤–Ω—É—Ç—Ä–µ–Ω–Ω–∏–π
    streaming_task = asyncio.create_task(
        grpc_client.stream_audio(test_command, hardware_id=hardware_id).__anext__()
    )
    
    # –ñ–¥–µ–º –Ω–µ–º–Ω–æ–≥–æ –¥–ª—è –Ω–∞—á–∞–ª–∞ —Å—Ç—Ä–∏–º–∞
    await asyncio.sleep(2.0)
    
    # 6. –ü–†–ï–†–´–í–ê–ù–ò–ï
    print("\n6Ô∏è‚É£ üö® –ü–†–ï–†–´–í–ê–ù–ò–ï GPRC –°–¢–†–ò–ú–ê:")
    print("   üîá –í—ã–∑—ã–≤–∞—é –ø—Ä–µ—Ä—ã–≤–∞–Ω–∏–µ...")
    
    interrupt_start = time.time()
    
    # –ü—Ä–µ—Ä—ã–≤–∞–µ–º –∞—É–¥–∏–æ
    audio_player.clear_all_audio_data()
    
    # –û—Ç–º–µ–Ω—è–µ–º gRPC –∑–∞–¥–∞—á—É
    streaming_task.cancel()
    
    # –û—Ç–ø—Ä–∞–≤–ª—è–µ–º –∫–æ–º–∞–Ω–¥—É –ø—Ä–µ—Ä—ã–≤–∞–Ω–∏—è –Ω–∞ —Å–µ—Ä–≤–µ—Ä
    grpc_client.force_interrupt_server()
    
    interrupt_time = (time.time() - interrupt_start) * 1000
    print(f"   ‚è±Ô∏è –í—Ä–µ–º—è –ø—Ä–µ—Ä—ã–≤–∞–Ω–∏—è: {interrupt_time:.1f}ms")
    
    # 7. –ü—Ä–æ–≤–µ—Ä–∫–∞ —Å–æ—Å—Ç–æ—è–Ω–∏—è
    print("\n7Ô∏è‚É£ –ü–†–û–í–ï–†–ö–ê –°–û–°–¢–û–Ø–ù–ò–Ø –ü–û–°–õ–ï –ü–†–ï–†–´–í–ê–ù–ò–Ø:")
    
    # –ü—Ä–æ–≤–µ—Ä—è–µ–º —Ä–∞–∑–º–µ—Ä –æ—á–µ—Ä–µ–¥–∏
    queue_size = audio_player.audio_queue.qsize()
    print(f"   üìä –†–∞–∑–º–µ—Ä –æ—á–µ—Ä–µ–¥–∏: {queue_size}")
    
    # –ü—Ä–æ–≤–µ—Ä—è–µ–º —Ñ–ª–∞–≥ –ø—Ä–µ—Ä—ã–≤–∞–Ω–∏—è
    interrupt_flag = audio_player.interrupt_flag.is_set()
    print(f"   üö® –§–ª–∞–≥ –ø—Ä–µ—Ä—ã–≤–∞–Ω–∏—è: {interrupt_flag}")
    
    # –ü—Ä–æ–≤–µ—Ä—è–µ–º –∞–∫—Ç–∏–≤–Ω—ã–π –ø–æ—Ç–æ–∫
    stream_active = audio_player.stream is not None
    print(f"   üîå –ê–∫—Ç–∏–≤–Ω—ã–π –ø–æ—Ç–æ–∫: {stream_active}")
    
    # 8. –î–æ–ø–æ–ª–Ω–∏—Ç–µ–ª—å–Ω–æ–µ –æ–∂–∏–¥–∞–Ω–∏–µ
    print("\n8Ô∏è‚É£ –î–û–ü–û–õ–ù–ò–¢–ï–õ–¨–ù–û–ï –û–ñ–ò–î–ê–ù–ò–ï:")
    print("   ‚è∞ –ñ–¥–µ–º 3 —Å–µ–∫—É–Ω–¥—ã –¥–ª—è –ø—Ä–æ–≤–µ—Ä–∫–∏...")
    await asyncio.sleep(3.0)
    
    # 9. –§–∏–Ω–∞–ª—å–Ω–∞—è –ø—Ä–æ–≤–µ—Ä–∫–∞
    print("\n9Ô∏è‚É£ –§–ò–ù–ê–õ–¨–ù–ê–Ø –ü–†–û–í–ï–†–ö–ê:")
    
    # –ü—Ä–æ–≤–µ—Ä—è–µ–º, –Ω–µ –ø—Ä–∏—à–ª–∏ –ª–∏ –Ω–æ–≤—ã–µ –∞—É–¥–∏–æ —á–∞–Ω–∫–∏
    final_queue_size = audio_player.audio_queue.qsize()
    print(f"   üìä –§–∏–Ω–∞–ª—å–Ω—ã–π —Ä–∞–∑–º–µ—Ä –æ—á–µ—Ä–µ–¥–∏: {final_queue_size}")
    
    # –ü—Ä–æ–≤–µ—Ä—è–µ–º, –Ω–µ –ø—Ä–æ–¥–æ–ª–∂–∞–µ—Ç –ª–∏ –∞—Å—Å–∏—Å—Ç–µ–Ω—Ç –≥–æ–≤–æ—Ä–∏—Ç—å
    if final_queue_size > 0:
        print("   ‚ùå –ê–°–°–ò–°–¢–ï–ù–¢ –ü–†–û–î–û–õ–ñ–ê–ï–¢ –ì–û–í–û–†–ò–¢–¨!")
        print("   üîç –ü—Ä–æ–±–ª–µ–º–∞: –Ω–æ–≤—ã–µ –∞—É–¥–∏–æ —á–∞–Ω–∫–∏ –ø—Ä–æ–¥–æ–ª–∂–∞—é—Ç –ø–æ—Å—Ç—É–ø–∞—Ç—å")
    else:
        print("   ‚úÖ –ê–°–°–ò–°–¢–ï–ù–¢ –ó–ê–ú–û–õ–ß–ê–õ!")
        print("   ‚úÖ –ü—Ä–µ—Ä—ã–≤–∞–Ω–∏–µ —Ä–∞–±–æ—Ç–∞–µ—Ç –∫–æ—Ä—Ä–µ–∫—Ç–Ω–æ")
    
    # 10. –ó–∞–≤–µ—Ä—à–µ–Ω–∏–µ
    print("\nüîü –ó–ê–í–ï–†–®–ï–ù–ò–ï:")
    print("   üßπ –û—á–∏—Å—Ç–∫–∞ —Ä–µ—Å—É—Ä—Å–æ–≤...")
    
    try:
        await grpc_client.disconnect()
        print("   ‚úÖ gRPC —Å–æ–µ–¥–∏–Ω–µ–Ω–∏–µ –∑–∞–∫—Ä—ã—Ç–æ")
    except:
        pass
    
    audio_player.force_stop_immediately()
    print("   ‚úÖ AudioPlayer –æ—Å—Ç–∞–Ω–æ–≤–ª–µ–Ω")
    
    print("\n" + "=" * 60)
    print("üéØ –¢–ï–°–¢ –†–ï–ê–õ–¨–ù–û–ì–û GPRC –°–¢–†–ò–ú–ê –ó–ê–í–ï–†–®–ï–ù!")
    
    # –ê–Ω–∞–ª–∏–∑ —Ä–µ–∑—É–ª—å—Ç–∞—Ç–æ–≤
    if interrupt_time < 100:  # –ú–µ–Ω—å—à–µ 100ms
        print("‚úÖ –ü–†–ï–†–´–í–ê–ù–ò–ï –†–ê–ë–û–¢–ê–ï–¢ –ë–´–°–¢–†–û!")
    else:
        print("‚ö†Ô∏è –ü–†–ï–†–´–í–ê–ù–ò–ï –ú–ï–î–õ–ï–ù–ù–û–ï!")
        
    if final_queue_size == 0:
        print("‚úÖ –ê–°–°–ò–°–¢–ï–ù–¢ –ü–û–õ–ù–û–°–¢–¨–Æ –ó–ê–ú–û–õ–ß–ê–õ!")
    else:
        print("‚ùå –ê–°–°–ò–°–¢–ï–ù–¢ –ü–†–û–î–û–õ–ñ–ê–ï–¢ –ì–û–í–û–†–ò–¢–¨!")
        print("üîç –ü–†–û–ë–õ–ï–ú–ê: gRPC —Å—Ç—Ä–∏–º –Ω–µ –ø—Ä–µ—Ä—ã–≤–∞–µ—Ç—Å—è –Ω–∞ —Å–µ—Ä–≤–µ—Ä–µ!")

async def test_interrupt_during_playback():
    """–¢–µ—Å—Ç–∏—Ä—É–µ–º –ø—Ä–µ—Ä—ã–≤–∞–Ω–∏–µ –≤–æ –≤—Ä–µ–º—è –≤–æ—Å–ø—Ä–æ–∏–∑–≤–µ–¥–µ–Ω–∏—è"""
    
    print("\nüéµ –¢–ï–°–¢ –ü–†–ï–†–´–í–ê–ù–ò–Ø –í–û –í–†–ï–ú–Ø –í–û–°–ü–†–û–ò–ó–í–ï–î–ï–ù–ò–Ø:")
    print("=" * 60)
    
    # 1. –°–æ–∑–¥–∞–Ω–∏–µ AudioPlayer
    audio_player = AudioPlayer()
    
    # 2. –°–æ–∑–¥–∞–Ω–∏–µ —Ç–µ—Å—Ç–æ–≤–æ–≥–æ –∞—É–¥–∏–æ
    sample_rate = 44100
    duration = 5  # 5 —Å–µ–∫—É–Ω–¥
    test_audio = np.sin(2 * np.pi * 440 * np.linspace(0, duration, sample_rate * duration))
    test_audio = (test_audio * 0.3).astype(np.float32)
    
    # 3. –î–æ–±–∞–≤–ª–µ–Ω–∏–µ –∞—É–¥–∏–æ
    chunk_size = 44100  # 1 —Å–µ–∫—É–Ω–¥–∞
    for i in range(0, len(test_audio), chunk_size):
        chunk = test_audio[i:i+chunk_size]
        audio_player.add_chunk(chunk)
    
    print(f"   üì¶ –î–æ–±–∞–≤–ª–µ–Ω–æ {len(test_audio)//chunk_size} —á–∞–Ω–∫–æ–≤")
    print(f"   üìä –†–∞–∑–º–µ—Ä –æ—á–µ—Ä–µ–¥–∏: {audio_player.audio_queue.qsize()}")
    
    # 4. –ñ–¥–µ–º –Ω–∞—á–∞–ª–∞ –≤–æ—Å–ø—Ä–æ–∏–∑–≤–µ–¥–µ–Ω–∏—è
    print("   ‚è∞ –ñ–¥–µ–º –Ω–∞—á–∞–ª–∞ –≤–æ—Å–ø—Ä–æ–∏–∑–≤–µ–¥–µ–Ω–∏—è...")
    await asyncio.sleep(1.0)
    
    # 5. –ü—Ä–µ—Ä—ã–≤–∞–Ω–∏–µ
    print("   üö® –ü–†–ï–†–´–í–ê–ù–ò–ï –í–û –í–†–ï–ú–Ø –í–û–°–ü–†–û–ò–ó–í–ï–î–ï–ù–ò–Ø!")
    interrupt_start = time.time()
    
    audio_player.clear_all_audio_data()
    
    interrupt_time = (time.time() - interrupt_start) * 1000
    print(f"   ‚è±Ô∏è –í—Ä–µ–º—è –ø—Ä–µ—Ä—ã–≤–∞–Ω–∏—è: {interrupt_time:.1f}ms")
    
    # 6. –ü—Ä–æ–≤–µ—Ä–∫–∞
    await asyncio.sleep(2.0)
    final_queue_size = audio_player.audio_queue.qsize()
    
    print(f"   üìä –§–∏–Ω–∞–ª—å–Ω—ã–π —Ä–∞–∑–º–µ—Ä –æ—á–µ—Ä–µ–¥–∏: {final_queue_size}")
    
    if final_queue_size == 0:
        print("   ‚úÖ –ü–†–ï–†–´–í–ê–ù–ò–ï –í–û –í–†–ï–ú–Ø –í–û–°–ü–†–û–ò–ó–í–ï–î–ï–ù–ò–Ø –†–ê–ë–û–¢–ê–ï–¢!")
    else:
        print("   ‚ùå –ü–†–ï–†–´–í–ê–ù–ò–ï –í–û –í–†–ï–ú–Ø –í–û–°–ü–†–û–ò–ó–í–ï–î–ï–ù–ò–Ø –ù–ï –†–ê–ë–û–¢–ê–ï–¢!")
    
    # –û—á–∏—Å—Ç–∫–∞
    audio_player.force_stop_immediately()

if __name__ == "__main__":
    print("üöÄ –ó–∞–ø—É—Å–∫ —Ç–µ—Å—Ç–∞ —Ä–µ–∞–ª—å–Ω–æ–≥–æ gRPC —Å—Ç—Ä–∏–º–∞...")
    
    # –°–Ω–∞—á–∞–ª–∞ —Ç–µ—Å—Ç–∏—Ä—É–µ–º –∏–∑–æ–ª–∏—Ä–æ–≤–∞–Ω–Ω–æ–µ –ø—Ä–µ—Ä—ã–≤–∞–Ω–∏–µ
    asyncio.run(test_interrupt_during_playback())
    
    print("\n" + "=" * 60)
    print("üåê –ü–ï–†–ï–•–û–î –ö –¢–ï–°–¢–£ GPRC –°–¢–†–ò–ú–ê...")
    print("üîß –£–ë–ï–î–ò–¢–ï–°–¨, –ß–¢–û –°–ï–†–í–ï–† –ó–ê–ü–£–©–ï–ù!")
    print("=" * 60)
    
    # –ó–∞—Ç–µ–º —Ç–µ—Å—Ç–∏—Ä—É–µ–º gRPC —Å—Ç—Ä–∏–º
    asyncio.run(test_real_grpc_interruption())
